# eea-examples

./: .gitignore  LICENSE.txt  README.md
esp32/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
esp32/main/: CMakeLists.txt  eea_api.cpp  eea_api.h  eea_config.h  eea_mqtt.cpp  eea_mqtt.h  eea_queue_msg.h  eea_registered_functions.cpp  eea_registered_functions.h  eea_runtime.cpp  eea_runtime.h  linker.lf  main.cpp  root_ca.pem
node/: README.md  package.json
node/src/: eea-api.js  eea-mqtt-wrapper.js  eea-registered-functions.js  eea-utils.js  eea-wrapper.js
python/: .gitignore  README.md  eea_accelerometer.py  eea_api.py  eea_mqtt.py  eea_registered_functions.py  eea_runtime_pywasm3.py  eea_runtime_wasmer.py  eea_utils.py  main.py
rust/: Cargo.toml  README.md
rust/resources/: eea_config.toml
rust/src/: cli.rs  configs.rs  eea_api.rs  main.rs  mqtt.rs  registered_functions.rs  wasm_helpers.rs
walkthrough/: README.md  eea-api-memory-export.wasm  eea-api-memory-import.wasm  hello-world-memory-export.wasm  hello-world-memory-import.wasm  step1.py  step2.py  step3-workflow.flow  step3.py
